--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Karol Community</title>
+    <title th:text="${sectionName}"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <!--引入bootstrup-->
     <!--引入jQuery-->
@@ -19,14 +19,14 @@
 <!--引用封装的上边菜单栏-->
 <div th:replace="navigation :: nav"></div>
 
-<div class="container-fluid main">
+<div class="container-fluid main profile">
     <div class="row">
         <!--左边-->
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>&nbsp;发现</h2>
+            <h2><span th:text="${sectionName}"></span>&nbsp;</h2>
             <hr>
 
-            <div class="media" th:each="q : ${pageDTO.question}">
+            <div class="media" th:each="q:${pageDTO.question}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-rounded img-size" th:src="${q.user.getAvatarUrl()}">
@@ -34,11 +34,9 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading" >
-                        <a th:href="@{/question/{id}(id=${q.getId()})}" th:text="${q.getTitle()}" aria-label="Previous">
-                        </a>
+                        <a th:href="@{/question/{id}(id=${q.getId()})}" th:text="${q.getTitle()}"></a>
                     </h4>
-
-                    <span ><a th:href="@{/question/{id}(id=${q.getId()})}" th:text="${q.getDescription()}"></a></span><br>
+                    <!--<span th:text="${q.getDescription()}"></span><br>-->
                     <span class="text-desc">
                         <span th:text="${q.getCommentCount()}"></span> 个回复 ·
                         <span th:text="${q.getViewCount()}"></span> 次浏览 ·
@@ -51,35 +49,42 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${pageDTO.showFirstPage}">
-                        <a href="/?page=1" aria-label="Previous">
+                        <a th:href="@{/profile/{section}/(section=${section},page=${1})}" aria-label="Previous">
                             <span aria-hidden="true">第一页</span>
                         </a>
                     </li>
                     <li th:if="${pageDTO.showPrevious}">
-                        <a th:href="@{/(page=${(pageDTO.page)-1})}" aria-label="Previous">
+                        <a th:href="@{/profile/{section}/(section=${section},page=${(pageDTO.page)-1})}" aria-label="Previous">
                             <span aria-hidden="true">上一页</span>
                         </a>
                     </li>
                     <li th:each="page:${pageDTO.pages}" th:class="${pageDTO.page==page}?'active':''">
-                        <a th:href="@{/(page=${page})}" th:text="${page}"></a>
+                        <a th:href="@{/profile/{section}/(section=${section},page=${page})}" th:text="${page}"></a>
                     </li>
                     <li th:if="${pageDTO.showNext}">
-                        <a th:href="@{/(page=${pageDTO.page+1})}" aria-label="Next">
+                        <a th:href="@{/profile/{section}/(section=${section},page=${pageDTO.page+1})}" aria-label="Next">
                             <span aria-hidden="true">下一页</span>
                         </a>
                     </li>
                     <li th:if="${pageDTO.showEndPage}">
-                        <a th:href="@{/(page=${pageDTO.totalPage})}" aria-label="Next">
+                        <a th:href="@{/profile/{section}/(section=${section},page=${pageDTO.totalPage})}" aria-label="Next">
                             <span aria-hidden="true">最后一页</span>
                         </a>
                     </li>
                 </ul>
             </nav>
 
+
+
         </div>
         <!--右边-->
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>热门话题</h3>
+            <div class="list-group section">
+                <a href="/profile/questions"
+                   th:class="${section=='questions'}?'active list-group-item':'list-group-item'">我的问题</a>
+                <a href="/profile/replies" th:class="${section=='replies'}?'active list-group-item':'list-group-item'">最新回复<span
+                        class="badge">14</span></a>
+            </div>
         </div>
     </div>
 </div>
